--- a/css/MultisitesAdmin.css
+++ b/css/MultisitesAdmin.css
@@ -1,5 +1,5 @@
-.cms-content-tools #cms-content-treeview #Form_AddSiteForm {
-	display: none;
+.MultisitesCMSPageAddController #ParentID {
+	margin-top: 10px;
 }
 
 .MultisitesCMSPageAddController #ParentID {
